# manus-backtest

./: .gitignore  BTCUSDT_OHLC.csv  pyproject.toml  toni-input.bat  toni-run.bat  toni-update.bat
src/indicators/: BCERefs.py  Indicator.py
src/manus_backtest/: main.py  reports.py
src/models/: __init__.py  backtest_config.py  daily_result.py  ohlc_candle.py  trade.py
tests/: test_output.py
tests/fixtures/: trade_analysis.txt  trade_results.csv
